--- a/src/component/navbar.css
+++ b/src/component/navbar.css
@@ -25,7 +25,7 @@
 	height: 80px;
 	padding: 0 2rem;
     margin: 4px;
-	background-color: var(--mainColor);
+	background-color: var(--secondaryColor);
 	color: var(--textColor);
 }
 
