--- a/src/component/homecontainer.css
+++ b/src/component/homecontainer.css
@@ -1,51 +1,60 @@
+*{
+  margin: 0;
+  padding: 0;
+
+}
+.container{
+  display: flex;
+  flex-direction: column;
+  background-image: url("../assets/home.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 80vh;
 
   
-  .image {
-    margin-top: 20px;
-  }
-  
-  img {
-    max-width: 100%;
-  }
-  
-  .buttons {
-    display: inline;
-    margin-right: 20px;
-    align-items: top;
-    text-align: top;
-  }
+}
+/* Button container */
+.buttons {
+  display: flex;
+  flex-direction: row;
+  text-align: center;
+  margin-top: 30vh;
+  margin-right: 100vh; 
+  padding: 40px;/* Center-align the buttons horizontally */
+}
 
-  body {
-    font-family: 'Arial', sans-serif;
-    background-color: #f0f0f0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    margin: 0;
-  }
-  
-
-  
-  .sign-in-button,
-  .sign-up-button {
-    background-color: #4caf50;
-    color: #fff;
-    padding: 10px 20px;
+/* Sign-up button */
+.sign-up-button {
+  padding: 10px 20px;
+    margin-right: 10px; /* Add right margin to create space */
     font-size: 16px;
+    background-color: #29335c; /* Set your desired button color */
+    color: #fff; /* Set your desired text color */
     border: none;
-    border-radius: 5px;
+    border-radius: 4px;
     cursor: pointer;
-    margin: 5px;
-    transition: background-color 0.3s ease;
+    transition: background-color 0.3s ease; /* Add a smooth transition effect */
+
+    /* Optional: Add hover effect */
+    &:hover {
+        background-color: #5767aa; /* Change color on hover */
+    }
+}
+
+/* Sign-in button */
+.sign-in-button {
+  padding: 10px 20px ;
+  font-size: 16px;
+  background-color: #db2b39; /* Set your desired button color */
+  color: #fff; /* Set your desired text color */
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s ease; /* Add a smooth transition effect */
+
+  /* Optional: Add hover effect */
+  &:hover {
+      background-color: #ff454f; /* Change color on hover */
   }
-  
-  .sign-up-button {
-    background-color: #3498db;
-  }
-  
-  .sign-in-button:hover,
-  .sign-up-button:hover {
-    background-color: #45a049;
-  }
-  
+}
+
